# photo-processor

./: .dockerignore  .firebaserc  .flake8  .gitignore  .replit  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  check_database.py  cloudrun-production.yaml  cloudrun-staging.yaml  cors.json  firebase.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_bib_detection.py  test_email.py  test_timing.py  test_vision.py
backend/: .env.cloudrun  .env.example  .gcloudignore  admin_feedback.py  alembic.ini  database.py  entrypoint.sh  env.py  fix_analytics_dashboard.sql  main.py  pyproject.toml  race_photos.db  requirements.txt  setup_google_vision.md
backend/alembic/: env.py
backend/alembic/versions/: 176edca3210c_initial_migration_users_and_usage_.py  974d8cfe8afe_update_processing_models_for_better_.py  add_analytics_tables_20251226.py  add_quota_fields.py  add_stripe_fields_to_users_20260119.py  fix_processing_job_id_type_20251226.py
backend/app/: tier_config.py
backend/app/api/: analytics.py  auth.py  batch.py  direct_upload.py  download.py  feedback.py  payment.py  process.py  process_tasks.py  secure_files.py  tiers.py  upload.py  users.py
backend/app/core/: config.py  errors.py  gcs.py  security.py  security_config.py  security_middleware.py
backend/app/models/: analytics.py  processing.py  schemas.py  usage.py  (+1 more)
backend/feedback/: feedback_20250813_202801_727251.json  feedback_20250813_203353_827897.json  feedback_20250813_203443_757931.json  feedback_20250813_204136_015331.json  feedback_20250813_204329_661910.json  feedback_log.jsonl
(+108 files in other folders)
